--- a/.env
+++ b/.env
@@ -1,2 +1,8 @@
 PORT=3000
-MONGODB_URL=mongodb://localhost:27017/mydatabase
+SECRET_KEY=your_secret_key
+
+DB_HOST=localhost
+DB_PORT=1434
+DB_USERNAME=sa
+DB_PASSWORD=123456
+DB_NAME=MyDB
