--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "mongoose": "^8.14.2",
