--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.1",
     "@types/mongoose": "^5.11.96",
-    "@types/node": "^22.15.17",
+    "@types/node": "^22.15.18",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
@@ -29,6 +29,7 @@
     "mongoose": "^8.14.2",
     "mssql": "^11.0.1",
     "reflect-metadata": "^0.2.2",
-    "typeorm": "^0.3.23"
+    "typeorm": "^0.3.23",
+    "zod": "^3.24.4"
   }
 }
